--- a/poster.html
+++ b/poster.html
@@ -7,6 +7,8 @@
 
     <title>Noche</title>
 
+    <link rel='shortcut icon' type='image/x-icon' href='assets/nocheLogo.png' />
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="custom.css">
 
@@ -59,16 +61,27 @@
 
     <div class = "container">
       <div class="row">
-        <div class = "col-lg-8">
+        <div class = "col-lg-6">
           <div class="img-thumbnail">
-            <img class="img-fluid" src ="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor2.jpeg?v=1613331180712" />
+            <img class="img-fluid poster-img" src ="assets/noche_poster.jpg" />
           </div>
         </div>
-        <div class = "col-lg-4">
-          here is a poster we created
+        <div class = "col-lg-1"></div>
+        <div class = "col-lg-5">
+          <div class="row">
+            <img class="img-fluid poster-img" src ="assets/nocheLogo.png" />
+          </div>
+          <div class="row">
+            <br/>
+            <br/>
+            On the left is a poster with information for Noche de las Estrellas.
+            Above is the logo we designed for Noche.
+          </div>
         </div>
       </div>
     </div>
+    <br/>
+    <br/>
 
 
     <!--footer-->
