--- a/about-us.html
+++ b/about-us.html
@@ -7,6 +7,8 @@
 
     <title>Noche</title>
 
+    <link rel='shortcut icon' type='image/x-icon' href='nocheLogo.png' />
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="custom.css">
 
