--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Noche</title>
 
+    <link rel='shortcut icon' type='image/x-icon' href='assets/nocheLogo.png' />
+
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="custom.css">
 
@@ -31,9 +33,7 @@
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li class="nav-item"><h3>
-            Noche
-          </h3></li>
+          <li class="nav-item"><h3>Noche</h3></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
@@ -49,7 +49,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-5">
-            <img src="title noche.png"/>
+            <img class = "img-fluid" src="assets/title noche.png"/>
           </div>
           <div class="col-md-7">
 
@@ -79,7 +79,7 @@
 
         <div class="col-sm-6 text-center home-page-div">
           <a href = "about-us.html" class = "home-page-links">
-          <img class = "img-fluid" src="ndlePic.png"/>
+          <img class = "img-fluid" src="assets/ndlePic.png"/>
           <br/>
           <br/>
           <h2>
@@ -95,7 +95,7 @@
 
         <div class="col-sm-6 text-center home-page-div">
           <a href="poster.html" class = "home-page-links">
-          <img class = "img-fluid" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "img-fluid" id="poster-link-img" src="assets/noche_poster_index.jpg"/>
           <br/>
           <br/>
           <h2>
