added about-us section

--- a/about-us.html
+++ b/about-us.html
@@ -7,7 +7,7 @@
 
     <title>Noche</title>
 
-    <link rel='shortcut icon' type='image/x-icon' href='nocheLogo.png' />
+    <link rel='shortcut icon' type='image/x-icon' href='assets/nocheLogo.png' />
 
     <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="custom.css">
@@ -64,71 +64,144 @@
       <!--row 1-->
       <div class = "card-columns">
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/EmilyKahn.jpg"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
-              <p class="card-text1">
-                hello, my name is...
+              <div ><strong class="card-text dark-purple">Emily</strong></div>
+              <p class="text-muted card-text1">
+                Hi! My name is Emily Kahn and I am in 12th grade. In my free time, I love to play music, write, spend time with family and friends, and run. I also love to design buildings, because after college, I want to become an architect! This past January, I released a song “The Light” on all streaming platforms. Right now, I am not sure where I will be going to college, but I cannot wait to decide! My favorite memory from spanish classes at LASA was in 10th grade with Profe Browne. She would have us sit in a circle together and talk about everything. I loved these times with her! I hope you enjoy the show!
               </p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/SophiaMD.jpg"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
+              <div ><strong class="card-text dark-purple">Sophia</strong></div>
               <p class="text-muted card-text1">
-                hello, my name is blah blah blah blah blah
+                Hi! My name is Sofia and I am very excited to be a part of LASA’s Noche de Las Estrellas. When I am not studying spanish, I like to play basketball with my friends, or play instruments for fun. In college, I am going to study biology and also be on a Pre-Med track. When I started spanish classes at lasa I was always interested in all of the creative projects that the teachers would give us. It has been a lot of work to put this show together, and I hope you enjoy it!
+
               </p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/OrlandoMora-Torres.jpg"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
+              <div ><strong class="card-text dark-purple">Orlando</strong></div>
               <p class="text-muted card-text1">
-                hello, my name is...
+                Hey! My name is Orlando Mora-Torres, I am in Spanish 6, am 18 years old, am Mexican-American and this is going to be my last year at LASA. Spanish was my first language I learned and in my Spanish classes I was able to develop more language skills, and at the same time have fun with my friends. In my free time I like to play soccer, video games and also spend time with my friends. When weekends come I go to church on Friday night and Sunday morning. In the future, I am planning to go to Texas State University to get a bachelor's degree in Civil Engineering, but I also hope to meet new people, make new friends, travel the world, and use my Spanish on my adventures.
               </p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/NiaOrakwue .jpg"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
+              <div ><strong class="card-text dark-purple">Nia</strong></div>
               <p class="text-muted card-text1">
-                hello, my name is...
+                Hi! I’m Nia and I am a  Spanish 6 student. I am responsible for editing the show, but you will also see me as a dancer in the background. To have an impact on my community, I have participated in a Spanish language learning program for recent Spanish-speaking immigrants. In addition to Spanish, I am an editor for the LASA newspaper, the Liberator, and play lacrosse. Outside of class I like to read, write poetry and spend time with my family. A very important achievement for me is my position as Editor-in-Chief of the Liberator. In the fall I'm going to Harvard University where I plan to study English, creative writing and journalism. My favorite part of the Spanish program at LASA has been my experience in the Spanish 4 AP class. I hope you enjoy the show!
               </p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/MayaRavi.png"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
+              <div ><strong class="card-text dark-purple">Maya</strong></div>
               <p class="text-muted card-text1">
-                hello, my name is...ajshgkejfh;lkejhlkht'l'l
+                Hi! My name is Maya and I am one of the editors of this year's virtual version of "Noche de Las Estrellas". I am currently a senior at LASA and spend most of my extracurricular time playing music and writing. Before the pandemic, I spent my weekends volunteering at UT's Butler School of Music, where I was able to help out with classical music concerts with internationally renowned musicians such as the Emerson String Quartet and the Brooklyn Duo. I have also been fortunate to advance my music and English education thanks to my acceptance into programs such as the Tanglewood Institute at Boston University, Interlochen's summer arts program, and the Iowa Young Writers' Studio. During my time at LASA, I really enjoyed having the opportunity to get to know the culture of the Spanish language better and the countries where it is spoken, and I look forward to continuing my education in Spanish at university. In the fall, I plan to attend Northwestern University as a flute performance and dual major in English. Thank you very much for coming and I hope you enjoy the show!
               </p>
             </div>
           </div>
         </div>
         <div class="card">
-          <img class = "card-img-top" src="https://cdn.glitch.com/df01f692-a08e-4159-9c52-3ba22fafbb81%2FblackColor.jpeg?v=1613322433785"/>
+          <img class = "card-img-top" src="assets/FotosDeRostro/LilyYeazell.JPG"/>
           <div class="card-body">
             <div class="caption text-center descriptions">
-              <div ><strong class="card-text dark-purple">Student #1</strong></div>
+              <div ><strong class="card-text dark-purple">Lily</strong></div>
               <p class="text-muted card-text1">
-                hello, my name is...
+                Hi! My name is Lily and I am in the twelfth grade at LASA school. My extracurricular activities include Science Olympiad and LASA's Women in Computer Science Club. Next year in college I plan to study computer science. However, I have not decided where I am going to attend college. With my free time, I like to bake (and eat what I bake), ice skate, and read. Also, with my free time before the pandemic, I participated in volunteer work with an organization called "Mobile Loaves and Fishes" where I made meals and brought them to communities that do not have enough food. One of my most important achievements is having leadership positions in the clubs in which I have participated because I could contribute to the organizations that I have enjoyed. I have learned a lot through the Spanish program at LASA and I am very excited to be a part of Noche de Las Estrellas this year. I hope everyone enjoys the show!
               </p>
             </div>
           </div>
         </div>
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/LuciaRubio.jpeg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Lucia</strong></div>
+              <p class="text-muted card-text1">
+                Hey! My name is Lucia Rubio Lobo and I am a Junior at LASA. I am currently in the Spanish 6 class and we are preparing a show called ‘The Night of the Stars’. A bit about myself, I was born in Madrid, Spain in 2004 and grew up there until 2013 when we moved to Austin. I have always liked dancing a lot and now I am part of the LASA drill team, the ‘First Ladies’, and I will be part of the new team for next year ‘Velocity Dance Team’. I like medicine and during the last month I have helped in several clinics with the Covid-19 vaccines, I hope that in the future I will be able to study medicine and dedicate myself to the health field. I have been part of the Spanish program at LASA since my first year and although Spanish is my native language, the Spanish program has helped me learn about other Hispanic cultures and understand the importance of Spanish in the world. I hope you enjoy the show!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/ElenaGareau.PNG"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Elena</strong></div>
+              <p class="text-muted card-text1">
+
+Hi! My name is Elena Gareau and I am a senior this year! Some of my extracurricular activities include being president of the Hispanic Honorary Society and being a member of the Girls Giving Grants. Since 2019, I have volunteered with We Are Blood at their blood donation center. An interesting fact of my life is that my mother and maternal family are from Mexico, so I have spoken Spanish since my childhood. One of my most important accomplishments has been that I have been able to secure leadership positions in my extracurricular organizations. Next year, I'm going to Los Angeles to attend UCLA. What I liked most about the Spanish program at LASA are the projects we have done.
+
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <!--<img class = "card-img-top" src="assets/FotosDeRostro/"/>-->
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Diogo</strong></div>
+              <p class="text-muted card-text1">
+              Hello, I am Diogo and I am a Senior in Spanish 6 class. When I am not studying Spanish, I like to play football and spend time with my friends. I always like to adventure and explore new parts while hiking. In college, I am going to study biochemistry and I will also be in the preparatory course of medicine. Since I started my Spanish classes at LASA, I have always been interested in learning from different types of cultures and doing the creative projects that the teachers have given us. This project has been a lot of fun and I hope you enjoy the show!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <!--<img class = "card-img-top" src="assets/FotosDeRostro/"/>-->
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Kinda</strong></div>
+              <p class="text-muted card-text1">
+                Hello! My name is Kinda and I am in the twelfth grade at LASA. I am representing the press team for Noche de Las Estrellas. My extracurricular activities include being a member of the Hispanic Honorary Society and Diversity Council. Since 2019, I have volunteered with Posada Esperanza, teaching English to families. During the pandemic, this happened virtually. Some of my most important accomplishments have been landing leadership positions in my extracurricular organizations and the creation of Minorities in Math. I'm still not sure where I'm going to college next year. What I liked most about the Spanish program is that it has allowed me to learn about other cultures and also has given me the confidence to teach English with my volunteer work. I am very excited for the show and I hope everyone enjoys it!
+
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/AlishaMorejon.JPG"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Alisha</strong></div>
+              <p class="text-muted card-text1">
+                Hi! I am Alisha Morejon and I am very excited for the show. I haven't decided where to go to college yet, but I know I want to study math. At LASA, I am involved with softball, theater, and Ambassadors. An important achievement was the creation of my club Minorities in Math. Recently, I have helped LASA speak with neighbors in the new community in East Austin. I am half Cuban and I have also traveled to the Dominican Republic, and I want my next trip to be to Brazil. I like that the Spanish program at LASA gives me an opportunity to learn about other cultures, but also to share mine with my classmates. I hope you enjoy the show!
+
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/AdamarisCruz.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Adamaris</strong></div>
+              <p class="text-muted card-text1">
+              Hi! My name is Adamaris Cruz and I am a senior at LASA. During my free time, I love running, reading, and spending time with my friends. I am a member of Breakthrough Central Texas, a first-generation student program with the goal of attending college. My parents immigrated to the United States from Mexico in 2000, and they have always shown me the importance of education. Therefore, I appreciate the way the Spanish program at LASA has taught me how diverse the Spanish-speaking community is, especially through art, music, clothing, and culture.
+              </p>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
 
