added spanish version

--- a/about-us.html
+++ b/about-us.html
@@ -41,7 +41,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item right-nav-links"><a class="nav-links" href="#">Español</a></li>
+          <li class="nav-item right-nav-links"><a class="nav-links" href="sobre-nos.html">Español</a></li>
         </ul>
       </div>
     </nav>
@@ -80,7 +80,7 @@
             <div class="caption text-center descriptions">
               <div ><strong class="card-text dark-purple">Sophia</strong></div>
               <p class="text-muted card-text1">
-                Hi! My name is Sofia and I am very excited to be a part of LASA’s Noche de Las Estrellas. When I am not studying spanish, I like to play basketball with my friends, or play instruments for fun. In college, I am going to study biology and also be on a Pre-Med track. When I started spanish classes at lasa I was always interested in all of the creative projects that the teachers would give us. It has been a lot of work to put this show together, and I hope you enjoy it!
+                Hi! My name is Sophia and I am very excited to be a part of LASA’s Noche de Las Estrellas. When I am not studying spanish, I like to play basketball with my friends, or play instruments for fun. In college, I am going to study biology and also be on a Pre-Med track. When I started spanish classes at lasa I was always interested in all of the creative projects that the teachers would give us. It has been a lot of work to put this show together, and I hope you enjoy it!
 
               </p>
             </div>
@@ -150,6 +150,17 @@
 
 Hi! My name is Elena Gareau and I am a senior this year! Some of my extracurricular activities include being president of the Hispanic Honorary Society and being a member of the Girls Giving Grants. Since 2019, I have volunteered with We Are Blood at their blood donation center. An interesting fact of my life is that my mother and maternal family are from Mexico, so I have spoken Spanish since my childhood. One of my most important accomplishments has been that I have been able to secure leadership positions in my extracurricular organizations. Next year, I'm going to Los Angeles to attend UCLA. What I liked most about the Spanish program at LASA are the projects we have done.
 
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <img class = "card-img-top" src="assets/FotosDeRostro/DanielResendiz.jpg"/>
+          <div class="card-body">
+            <div class="caption text-center descriptions">
+              <div ><strong class="card-text dark-purple">Daniel</strong></div>
+              <p class="text-muted card-text1">
+                Hello, my name is Daniel Resendiz and I am in the Spanish 6 class. I love playing soccer with my friends and skating. Some programs that I am a part of are Boy Scouts of America and Breakthrough Central Texas that have given me many opportunities to help the community. I was involved in painting a map for an Elementary School and helping out at the Texas Food Bank. I always like to adventure and camp in new parts of the United States. I am planning to go to college and study Computer Science. What I liked about the Spanish classes at LASA are all the cultures that I have studied. I hope you like the show!
               </p>
             </div>
           </div>
