--- a/gráficos.html
+++ b/gráficos.html
@@ -33,15 +33,13 @@
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li class="nav-item"><h3>
-            Noche
-          </h3></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
+          <li class="nav-item"><h3>Noche</h3></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="index-español.html">Pagina de Inicio</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="sobre-nos.html">Sobre Nosotros</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="gráficos.html">Gráficos</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item right-nav-links"><a class="nav-links" href="gráficos.html">Español</a></li>
+          <li class="nav-item right-nav-links"><a class="nav-links" href="poster.html">English</a></li>
         </ul>
       </div>
     </nav>
@@ -50,10 +48,10 @@
     <div class="jumbotron main-header">
       <div class="container">
         <h1 class="header-title">
-          Posters
+          Los Gráficos
         </h1>
         <p>
-          Here is are posters and graphics we have made to promote the show.
+          Aquí, hay algunos gráficos que hemos hecho para promover el show.
         </p>
       </div>
     </div>
@@ -89,7 +87,7 @@
           <div class = "col-md-5">
             <div class="side-bordered">
               <p>Noche de las Estrellas</p>
-              <p>LASA Spanish 6</p>
+              <p>LASA Español 6</p>
               <p>7309 Lazy Creek Dr</p>
               <p>Austin, TX 78724</p>
             </div>
