--- a/index-español.html
+++ b/index-español.html
@@ -34,12 +34,12 @@
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li class="nav-item"><h3>Noche</h3></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="index-español.html">Pagina de Inicio</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="sobre-nos.html">Sobre Nosotros</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="gráficos.html">Gráficos</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item right-nav-links"><a class="nav-links" href="index-español.html">Español</a></li>
+          <li class="nav-item right-nav-links"><a class="nav-links" href="index.html">English</a></li>
         </ul>
       </div>
     </nav>
@@ -54,15 +54,11 @@
           <div class="col-md-7">
 
 
-            <h3>April 30th</h3>
+            <h3>el 30 de abril</h3>
 
 
             <p>
-              Noche de las Estrellas, which translates in English to Night of the Stars, is an
-              annual spectacular created by LASA's Spanish 6 class. This year the show will be held on
-              April 30th and will be entirely virtual,
-              but nevertheless spectacular, complete with everything from traditional Bachata dancing
-              to Latin Pop Music and filled with plenty of dancing and laughter!
+              Noche de las Estrellas es un espectáculo presentado por la clase de español 6 de LASA cada año. Este año, el show va a ser el 30 de abril, y totalmente virtual, pero sin embargo espectacular, completa con todo, desde los bailes tradicionales de bachata, a la música de latin pop, y ¡lleno de un montón de bailes y sonrisas!
             </p>
           </div>
         </div>
@@ -78,15 +74,15 @@
 
 
         <div class="col-sm-6 text-center home-page-div">
-          <a href = "about-us.html" class = "home-page-links">
+          <a href = "sobre-nos.html" class = "home-page-links">
           <img class = "img-fluid" src="assets/ndlePic.png"/>
           <br/>
           <br/>
           <h2>
-            About Us
+            Sobre Nosotros
           </h2>
           <p>
-            Want to get to know the students putting on this show? Click here to learn more about us!
+            ¿Quieres saber más de los estudiantes que están haciendo el show? ¡Haz clic aquí!
           </p>
             </a>
         </div>
@@ -94,15 +90,16 @@
 
 
         <div class="col-sm-6 text-center home-page-div">
-          <a href="poster.html" class = "home-page-links">
+          <a href="gráficos.html" class = "home-page-links">
           <img class = "img-fluid" id="poster-link-img" src="assets/noche_poster_index.jpg"/>
           <br/>
           <br/>
           <h2>
-            Posters
+            Gráficos
           </h2>
           <p>
-            Click here to see some fun graphics we've made to promote the show!
+            Haz clic aquí para ver algunos gráficos que hemos hecho para promover el show.
+
           </p>
           </a>
         </div>
@@ -115,10 +112,10 @@
       <div class="row">
         <div class = "col-md-4">
           <h1 id = "countdown-title">
-            Countdown
+            Cuenta Regresiva
           </h1>
           <h3  id = "countdown-sub">
-            to April 30th
+            al 30 de abril
           </h3>
         </div>
         <div class = "col-md=8">
@@ -132,10 +129,10 @@
     <!--trailer-->
     <div class="container dark-purple">
       <h1>
-        Trailer
+        El Tráiler
       </h1>
       <p>
-        We haven't finished making this yet, but check back soon!
+        No hemos terminado con hacer el tráiler, ¡pero vuelve pronto!
       </p>
     </div>
     <br/>
@@ -149,7 +146,7 @@
           <div class = "col-md-5">
             <div class="side-bordered">
               <p>Noche de las Estrellas</p>
-              <p>LASA Spanish 6</p>
+              <p>LASA Español 6</p>
               <p>7309 Lazy Creek Dr</p>
               <p>Austin, TX 78724</p>
             </div>
