Added social media and watch page

--- a/about-us.html
+++ b/about-us.html
@@ -39,6 +39,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="watch.html">Watch</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item right-nav-links"><a class="nav-links" href="sobre-nos.html">Español</a></li>
