--- a/gráficos.html
+++ b/gráficos.html
@@ -37,6 +37,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="index-español.html">Pagina de Inicio</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="sobre-nos.html">Sobre Nosotros</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="gráficos.html">Gráficos</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="ver-el-show.html">Ver el Show</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item right-nav-links"><a class="nav-links" href="poster.html">English</a></li>
