--- a/index-español.html
+++ b/index-español.html
@@ -37,6 +37,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="index-español.html">Pagina de Inicio</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="sobre-nos.html">Sobre Nosotros</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="gráficos.html">Gráficos</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="ver-el-show.html">Ver el Show</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item right-nav-links"><a class="nav-links" href="index.html">English</a></li>
@@ -104,6 +105,22 @@
           </a>
         </div>
 
+      </div>
+    </div>
+
+    <!--Social Media-->
+    <div class = "container bottom-border social-media">
+      <h1 class="dark-purple">Las Redes Sociales</h1>
+      <div class = "row light-purple">
+        <div class = "col-sm-3">
+          <h5>Instagram: <a href = "https://www.instagram.com/lasanoche/" class="social-media-links">@lasanoche</a></h5>
+        </div>
+        <div class = "col-sm-4">
+          <h5>Facebook: <a href="https://www.facebook.com/noche.delasestrellas.7"class="social-media-links">Noche de las Estrellas</a></h5>
+        </div>
+        <div class = "col-sm-3">
+          <h5>TikTok: <a href="https://www.tiktok.com/@lasanoche?lang=en" class="social-media-links">@lasanoche</a></h5>
+        </div>
       </div>
     </div>
 
