--- a/ver-el-show.html
+++ b/ver-el-show.html
@@ -33,16 +33,14 @@
     <nav class="navbar navbar-expand-sm fixed-top">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li class="nav-item"><h3>
-            Noche
-          </h3></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
-          <li class="nav-item left-nav-links"><a class="nav-links" href="watch.html">Watch</a></li>
+          <li class="nav-item"><h3>Noche</h3></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="index-español.html">Pagina de Inicio</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="sobre-nos.html">Sobre Nosotros</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="gráficos.html">Gráficos</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="ver-el-show.html">Ver el Show</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item right-nav-links"><a class="nav-links" href="gráficos.html">Español</a></li>
+          <li class="nav-item right-nav-links"><a class="nav-links" href="watch.html">English</a></li>
         </ul>
       </div>
     </nav>
@@ -51,36 +49,16 @@
     <div class="jumbotron main-header">
       <div class="container">
         <h1 class="header-title">
-          Posters
+          Ver el Show!
         </h1>
-        <p>
-          Here is are posters and graphics we have made to promote the show.
+        <p class = "big-text">
+          ¡el enlace de Youtube Premiere estará aquí el 30 de abril! ¡Vuelve para ver el show!
         </p>
       </div>
     </div>
 
 
-    <div class = "container">
-      <div class="row">
-        <div class = "col-lg-7">
-          <div class="img-thumbnail">
-            <img class="img-fluid poster-img" src ="assets/noche_poster.jpg" />
-          </div>
-        </div>
 
-        <div class = "col-lg-4">
-          <div class="row">
-            <img class="img-fluid poster-img" src ="assets/nocheLogo.png" />
-          </div>
-          <br/>
-          <div class="row">
-            <img class="img-fluid poster-img" src ="assets/noche_poster2.jpg" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <br/>
-    <br/>
 
 
     <!--footer-->
