--- a/watch.html
+++ b/watch.html
@@ -42,7 +42,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="watch.html">Watch</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li class="nav-item right-nav-links"><a class="nav-links" href="gráficos.html">Español</a></li>
+          <li class="nav-item right-nav-links"><a class="nav-links" href="ver-el-show.html">Español</a></li>
         </ul>
       </div>
     </nav>
@@ -51,36 +51,16 @@
     <div class="jumbotron main-header">
       <div class="container">
         <h1 class="header-title">
-          Posters
+          Watch the Show!
         </h1>
-        <p>
-          Here is are posters and graphics we have made to promote the show.
+        <p class = "big-text">
+          The Youtube Premiere will be linked here on April 30th! Come back then to see the show!
         </p>
       </div>
     </div>
 
 
-    <div class = "container">
-      <div class="row">
-        <div class = "col-lg-7">
-          <div class="img-thumbnail">
-            <img class="img-fluid poster-img" src ="assets/noche_poster.jpg" />
-          </div>
-        </div>
 
-        <div class = "col-lg-4">
-          <div class="row">
-            <img class="img-fluid poster-img" src ="assets/nocheLogo.png" />
-          </div>
-          <br/>
-          <div class="row">
-            <img class="img-fluid poster-img" src ="assets/noche_poster2.jpg" />
-          </div>
-        </div>
-      </div>
-    </div>
-    <br/>
-    <br/>
 
 
     <!--footer-->
