--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <li class="nav-item left-nav-links"><a class="nav-links" href="index.html">Home</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="about-us.html">About Us</a></li>
           <li class="nav-item left-nav-links"><a class="nav-links" href="poster.html">Posters</a></li>
+          <li class="nav-item left-nav-links"><a class="nav-links" href="watch.html">Watch</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="nav-item right-nav-links"><a class="nav-links" href="index-español.html">Español</a></li>
@@ -71,12 +72,10 @@
     </div>
 
 
+
     <!--home page links-->
     <div class = "container bottom-border">
       <div class="row ">
-
-
-
         <div class="col-sm-6 text-center home-page-div">
           <a href = "about-us.html" class = "home-page-links">
           <img class = "img-fluid" src="assets/ndlePic.png"/>
@@ -90,9 +89,6 @@
           </p>
             </a>
         </div>
-
-
-
         <div class="col-sm-6 text-center home-page-div">
           <a href="poster.html" class = "home-page-links">
           <img class = "img-fluid" id="poster-link-img" src="assets/noche_poster_index.jpg"/>
@@ -107,6 +103,22 @@
           </a>
         </div>
 
+      </div>
+    </div>
+
+    <!--Social Media-->
+    <div class = "container bottom-border social-media">
+      <h1 class="dark-purple">Social Media</h1>
+      <div class = "row light-purple">
+        <div class = "col-sm-3">
+          <h5>Instagram: <a href = "https://www.instagram.com/lasanoche/" class="social-media-links">@lasanoche</a></h5>
+        </div>
+        <div class = "col-sm-4">
+          <h5>Facebook: <a href="https://www.facebook.com/noche.delasestrellas.7"class="social-media-links">Noche de las Estrellas</a></h5>
+        </div>
+        <div class = "col-sm-3">
+          <h5>TikTok: <a href="https://www.tiktok.com/@lasanoche?lang=en" class="social-media-links">@lasanoche</a></h5>
+        </div>
       </div>
     </div>
 
