--- a/ver-el-show.html
+++ b/ver-el-show.html
@@ -58,6 +58,21 @@
     </div>
 
 
+    <div class= "container">
+      <h2 class="dark-purple">Mientras esperan, ¡disfruten estes videos del año pasado!</h2>
+      <div class="row">
+        <div class="col-lg-6">
+
+          <iframe class="video" width="100%" height = "400" src="https://www.youtube.com/embed/8kN9xo-JhMc">
+          </iframe>
+
+        </div>
+        <div class="col-lg-6">
+          <iframe class="video" width="100%" height = "400" src="https://www.youtube.com/embed/aeFojFYCrz8">
+          </iframe>
+        </div>
+      </div>
+    </div>
 
 
 
