--- a/watch.html
+++ b/watch.html
@@ -59,6 +59,23 @@
       </div>
     </div>
 
+    <div class= "container">
+      <h2 class="dark-purple">In the meantime, check out these videos from last year!</h2>
+      <div class="row">
+        <div class="col-lg-6">
+
+          <iframe class="video" width="100%" height = "400" src="https://www.youtube.com/embed/8kN9xo-JhMc">
+          </iframe>
+
+
+
+        </div>
+        <div class="col-lg-6">
+          <iframe class="video" width="100%" height = "400" src="https://www.youtube.com/embed/aeFojFYCrz8">
+          </iframe>
+        </div>
+      </div>
+    </div>
 
 
 
