--- a/index-español.html
+++ b/index-español.html
@@ -55,7 +55,7 @@
           <div class="col-md-7">
 
 
-            <h3>el 30 de abril</h3>
+            <h3>el 30 de abril a las 7 de la tarde</h3>
 
 
             <p>
@@ -146,11 +146,17 @@
     <!--trailer-->
     <div class="container dark-purple">
       <h1>
-        El Tráiler
+        Los Tráileres
       </h1>
-      <p>
-        No hemos terminado con hacer el tráiler, ¡pero vuelve pronto!
-      </p>
+      <br/>
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe src="https://drive.google.com/file/d/1lDYtzw6I6UELWl-0lvw50SYORA4smzJz/preview" width="100%" height="350"></iframe>
+        </div>
+        <div class="col-lg-6">
+          <iframe src="https://drive.google.com/file/d/12ZWA5mqvUjDf5_ohjHi2eOV36dyIRgKV/preview" width="100%" height="350"></iframe>
+        </div>
+      </div>
     </div>
     <br/>
     <br/>
