--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="col-md-7">
 
 
-            <h3>April 30th</h3>
+            <h3>April 30th @ 7:00pm</h3>
 
 
             <p>
@@ -144,11 +144,17 @@
     <!--trailer-->
     <div class="container dark-purple">
       <h1>
-        Trailer
+        Trailers
       </h1>
-      <p>
-        We haven't finished making this yet, but check back soon!
-      </p>
+      <br/>
+      <div class="row">
+        <div class="col-lg-6">
+          <iframe src="https://drive.google.com/file/d/1lDYtzw6I6UELWl-0lvw50SYORA4smzJz/preview" width="100%" height="350"></iframe>
+        </div>
+        <div class="col-lg-6">
+          <iframe src="https://drive.google.com/file/d/12ZWA5mqvUjDf5_ohjHi2eOV36dyIRgKV/preview" width="100%" height="350"></iframe>
+        </div>
+      </div>
     </div>
     <br/>
     <br/>
